Tab Dragging: Fix occasional crash when the drag is ending.

When the drag ends, TabDragController::ClearTabDraggingInfo() might
trigger a bounds change of the dragged window, which then trigger
TabDragController::OnWidgetBoundsChanged() to be called again to
continue dragging. We should remove TabDragController as an observer of
the dragged widget when the drag is ending as we do not care about any
subsequent moves to the widget.

Bug: 854835
Change-Id: Ia940e7f0a33609bfc19ff9d96861948579fb5dd7
Reviewed-on: https://chromium-review.googlesource.com/1109266
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Xiaoqian Dai <xdai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573521}
Former-commit-id: ddb2b533063e200d40e2bf89cc8bb11462158806